# llm-adversarial-arena

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  arena.py  bluffing.py  debate.py  elo.py  llm_player.py  negotiation.py  strategies.py
src/viz/: __init__.py  app.py
tests/: test_arena.py  test_debate.py  test_elo.py  test_negotiation.py
